--- a/nixaPublicSchoolLocator/index.html
+++ b/nixaPublicSchoolLocator/index.html
@@ -47,14 +47,14 @@
     		<div class="modal-content">
       			<div class="modal-header">
         			<button type="button" class="close" data-dismiss="modal">&times;</button>
-        			<h4 class="modal-title text-center"><b>Nixa Public Schools Attendance Locator</b></h4>
+        			<h4 class="modal-title text-center"><b>Nixa Public Schools - District Boundaries</b></h4>
       			</div>
       			<div class="modal-body">
       				<!-- TODO -->
-        			<p style="text-align: center;">You can use this application to find the school your child(ren) will attend.</p>
+        			<p style="text-align: center;">Nixa Public Schools has one high school and one junior high. Anyone residing within the district boundaries will attend those schools. If you would like to know if your address resides within Nixa, you can check it using either the Elementary or Intermediate selection.</p>
         			<hr>
-        			<p>1. Click on either one of the buttons marked "Elementary" or "Intermediate" to select a scenario.</p>
-        			<p>2. Enter your home address and press enter to view attendance area changes for your family.</p>
+        			<p>1. Click on "Elementary" (K-4th) or "Intermediate" (5th-6th).</p>
+        			<p>2. Enter your home address and press enter to view the boundary school.</p>
         			<hr>
         			<img class="img-responsive" src="data/info1.png" alt="info1">
       			</div>
