--- a/smithvillePublicSchool/index.html
+++ b/smithvillePublicSchool/index.html
@@ -4,7 +4,7 @@
 		<meta charset='utf-8' />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1' />
-		<title>Nixa Public Schools</title>
+		<title>Smithville Public Schools</title>
 		
 		<!-- CSS Links -->
 
@@ -24,14 +24,6 @@
 	<div id="map"></div>
 	<!-- control container -->
 	<div id="searchMenu">
-	
-		<div id="buttonBox">
-			<div class="btn-group btn-group-justified">
-  				<a id="buttonOne" class="btn btn-default" onclick="nixaPublicSchoolLocator.clickedAddDataButtonOne(this.id)">Elementary</a>
-  				<a id="buttonTwo" class="btn btn-default" onclick="nixaPublicSchoolLocator.clickedAddDataButtonTwo(this.id)">Intermediate</a>
-			</div>
-		</div>
-		
 		<input id="formOne" type="text" name="geosearch" placeholder="Type your address here"><br>
 		<div id="questionOne" data-toggle="modal" data-target="#myModal">
 			<!--<i class="fa fa-question" aria-hidden="true"></i>-->
@@ -47,7 +39,7 @@
     		<div class="modal-content">
       			<div class="modal-header">
         			<button type="button" class="close" data-dismiss="modal">&times;</button>
-        			<h4 class="modal-title text-center"><b>Nixa Public Schools - District Boundaries</b></h4>
+        			<h4 class="modal-title text-center"><b>Smithville Public Schools - District Boundaries</b></h4>
       			</div>
       			<div class="modal-body">
       				<!-- TODO -->
@@ -113,7 +105,7 @@
 	<!-- jquery library -->
 	<script src="lib/jquery-3.1.1.min.js"></script>
 	<!-- Google Maps API -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4BBUguhTPq53gNteHki7sfuTS5TN-s-Q&libraries=geometry,places"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3wZZx_Em6xGYlERacPdLuKjJhHlMoByE&libraries=geometry,places"></script>
 	<!-- link bootstrap js -->
 	<script src="lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 	<!-- javascript for leaflet map functions -->
