--- a/smithvillePublicSchool/index.html
+++ b/smithvillePublicSchool/index.html
@@ -43,12 +43,15 @@
       			</div>
       			<div class="modal-body">
       				<!-- TODO -->
-        			<p style="text-align: center;">Nixa Public Schools has one high school and one junior high. Anyone residing within the district boundaries will attend those schools. If you would like to know if your address resides within Nixa, you can check it using either the Elementary or Intermediate selection.</p>
+        			<p style="text-align: center;">You can use this tool to view which district and school is available to you based on where you live.</p>
         			<hr>
-        			<p>1. Click on "Elementary" (K-4th) or "Intermediate" (5th-6th).</p>
-        			<p>2. Enter your home address and press enter to view the boundary school.</p>
-        			<hr>
+        			<p>1. Type your address in the window at the top - a dropdown will appear to help you complete your address.</p>
         			<img class="img-responsive" src="data/info1.png" alt="info1">
+        			<br>
+        			<br>
+        			<p>2. Press enter or click on the address in the window that appears to view the district boundary you are located in.</p>
+        			<hr>
+        			<img class="img-responsive" src="data/info2.png" alt="info2">
       			</div>
       			<div class="modal-footer text-center">
         			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
