--- a/smithvillePublicSchool/index.html
+++ b/smithvillePublicSchool/index.html
@@ -43,7 +43,7 @@
       			</div>
       			<div class="modal-body">
       				<!-- TODO -->
-        			<p style="text-align: center;">You can use this tool to view which district and school is available to you based on where you live.</p>
+        			<p style="text-align: center;">You can use this tool to view which district or school is available to you based on where you live.</p>
         			<hr>
         			<p>1. Type your address in the window at the top - a dropdown will appear to help you complete your address.</p>
         			<img class="img-responsive" src="data/info1.png" alt="info1">
