--- a/smithvillePublicSchool/index.html
+++ b/smithvillePublicSchool/index.html
@@ -39,17 +39,17 @@
     		<div class="modal-content">
       			<div class="modal-header">
         			<button type="button" class="close" data-dismiss="modal">&times;</button>
-        			<h4 class="modal-title text-center"><b>Smithville Public Schools - District Boundaries</b></h4>
+        			<h4 class="modal-title text-center"><b>Smithville Public Schools - Attendance Zones</b></h4>
       			</div>
       			<div class="modal-body">
       				<!-- TODO -->
-        			<p style="text-align: center;">You can use this tool to view which district or school is available to you based on where you live.</p>
+        			<p style="text-align: center;">You can use this tool to view which school is available to you based on where you live.</p>
         			<hr>
         			<p>1. Type your address in the window at the top - a dropdown will appear to help you complete your address.</p>
         			<img class="img-responsive" src="data/info1.png" alt="info1">
         			<br>
         			<br>
-        			<p>2. Press enter or click on the address in the window that appears to view the district boundary you are located in.</p>
+        			<p>2. Press enter or click on the address in the window that appears to view the school attendance zone you are located in.</p>
         			<hr>
         			<img class="img-responsive" src="data/info2.png" alt="info2">
       			</div>
