major updates north kansas tool

--- a/northKansasCityPublicSchools/index.html
+++ b/northKansasCityPublicSchools/index.html
@@ -54,11 +54,11 @@
       				<!-- TODO -->
         			<p style="text-align: center;">You can use this tool to view which school is available to you based on where you live.</p>
         			<hr>
-        			<p>1. Type your address in the window at the top - a dropdown will appear to help you complete your address.</p>
+        			<p>1. Choose a school scenario, then type your address in the window at the top - a dropdown will appear to help you complete your address.</p>
         			<img class="img-responsive" src="data/info1.png" alt="info1">
         			<br>
         			<br>
-        			<p>2. Press enter or click on the address in the window that appears to view the school attendance zone you are located in.</p>
+        			<p>2. Press enter or click on the address in the window that appears to view the school attendance zone you are located in based on the school scenario that you have chosen.</p>
         			<hr>
         			<img class="img-responsive" src="data/info2.png" alt="info2">
       			</div>
