major updates NKS tool

--- a/northKansasCityPublicSchools/index.html
+++ b/northKansasCityPublicSchools/index.html
@@ -82,6 +82,9 @@
       				<!-- TODO -->
         			<p id="theSchool"></p>
         			<hr>
+        			<p id="theSchoolPhone"></p>
+        			<p id="theSchoolAddress1"></p>
+        			<p id="theSchoolAddress2"></p>
         			<br>
       			</div>
       			<div class="modal-footer text-center">
