--- a/northKansasCityPublicSchools/index.html
+++ b/northKansasCityPublicSchools/index.html
@@ -81,11 +81,16 @@
       			<div id="schoolAppend" class="modal-body text-center">
       				<!-- TODO -->
         			<p id="theSchool"></p>
-        			<hr>
         			<p id="theSchoolPhone"></p>
         			<p id="theSchoolAddress1"></p>
         			<p id="theSchoolAddress2"></p>
         			<br>
+        			<hr>
+        			
+        			<p id="theSchool2"></p>
+        			<p id="theSchoolPhone2"></p>
+        			<p id="theSchoolAddress12"></p>
+        			<p id="theSchoolAddress22"></p>
       			</div>
       			<div class="modal-footer text-center">
         			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
