add query csv master

--- a/northKansasCityPublicSchools/index.html
+++ b/northKansasCityPublicSchools/index.html
@@ -128,6 +128,7 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLjIFm9wVPP2tafdXl47HpHR2vARwOork&libraries=geometry,places"></script>
 	<!-- link bootstrap js -->
 	<script src="lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+	<script src="lib/jquery-csv-master/src/jquery.csv.js"></script>
 	<!-- javascript for leaflet map functions -->
 	<script src="js/customMap.js"></script>
   </body>
