--- a/northKansasCityPublicSchools/index.html
+++ b/northKansasCityPublicSchools/index.html
@@ -12,6 +12,8 @@
 		<link rel="stylesheet" href="lib/font-awesome-4.7.0/css/font-awesome.min.css" />
 		<!-- link bootstrap css -->
 		<link rel="stylesheet" href="lib/bootstrap-3.3.7/css/bootstrap.min.css" />
+		
+		<link rel="stylesheet" href="lib/awesomplete-gh-pages/awesomplete.css" />
 		<!-- custom website & map CSS -->
 		<link href="css/customMap.css" rel="stylesheet" />
 		
@@ -34,6 +36,8 @@
 		</div>
 		
 		<input id="formOne" type="text" name="geosearch" placeholder="Type your address here"><br>
+		
+		<input id="customInput">
 		<div id="questionOne" data-toggle="modal" data-target="#myModal">
 			<!--<i class="fa fa-question" aria-hidden="true"></i>-->
 			<i class="fa fa-info" aria-hidden="true"></i>
@@ -129,6 +133,7 @@
 	<!-- link bootstrap js -->
 	<script src="lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 	<script src="lib/jquery-csv-master/src/jquery.csv.js"></script>
+	<script src="lib/awesomplete-gh-pages/awesomplete.js"></script>
 	<!-- javascript for leaflet map functions -->
 	<script src="js/customMap.js"></script>
   </body>
