--- a/northKansasCityPublicSchools/index.html
+++ b/northKansasCityPublicSchools/index.html
@@ -37,7 +37,8 @@
 		
 		<input id="formOne" type="text" name="geosearch" placeholder="Type your address here"><br>
 		
-		<input id="customInput">
+		<input id="customInput" type="text" name="customInput" placeholder="Use a designated list of addresses">
+		
 		<div id="questionOne" data-toggle="modal" data-target="#myModal">
 			<!--<i class="fa fa-question" aria-hidden="true"></i>-->
 			<i class="fa fa-info" aria-hidden="true"></i>
