--- a/northKansasCityPublicSchools/index.html
+++ b/northKansasCityPublicSchools/index.html
@@ -37,7 +37,7 @@
 		
 		<input id="formOne" type="text" name="geosearch" placeholder="Type your address here"><br>
 		
-		<input id="customInput" type="text" name="customInput" placeholder="Type your address here">
+		<input id="customInput" type="text" name="customInput" placeholder="Type your address here custom">
 		
 		<div id="questionOne" data-toggle="modal" data-target="#myModal">
 			<!--<i class="fa fa-question" aria-hidden="true"></i>-->
