--- a/nixaPublicSchoolLocator/index.html
+++ b/nixaPublicSchoolLocator/index.html
@@ -57,6 +57,8 @@
         			<p>2. Enter your home address and press enter to view the boundary school.</p>
         			<hr>
         			<img class="img-responsive" src="data/info1.png" alt="info1">
+        			<hr>
+        			<p>All homes located on East Thorndale Drive and the Villages of Ashford will attend High Pointe and Summit. This includes 676 Greer Ave. and higher.</p>
       			</div>
       			<div class="modal-footer text-center">
         			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
